<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_white"
    >
    <include
        android:id="@+id/header"
        layout="@layout/include_header_text"/>
<ScrollView
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/header"
    >
    <LinearLayout
        android:id="@+id/ll_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/d_10dp">
        <TextView
            android:id="@+id/tv_moreoptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitosans_semibold"
            android:text="@string/text_more_option"
            android:drawableLeft="@drawable/ic_dropdown_gray"
            android:visibility="gone"
            android:drawablePadding="@dimen/d_10dp"
            android:layout_marginTop="@dimen/d_10dp"
            android:textColor="@color/c_blue"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitosans_semibold"
            android:text="@string/text_duedate"
            android:layout_marginTop="@dimen/d_10dp"
            android:textColor="@color/c_dark_gray"
            android:textSize="@dimen/text_size_16" />
        <TextView
            android:id="@+id/tv_duedate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_select_date"
            android:drawablePadding="@dimen/d_5dp"
            android:drawableLeft="@drawable/ic_date"
            android:background="@drawable/change_password_border"
            android:gravity="left"
            android:padding="@dimen/d_10dp"
            android:layout_marginTop="@dimen/d_10dp"
            android:layout_marginRight="@dimen/d_2dp"
            android:fontFamily="@font/nunitosans_regular"
            android:textColor="@color/c_gray_text"
            android:textSize="@dimen/text_size_16"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitosans_semibold"
            android:text="@string/text_audit_name"
            android:layout_marginTop="@dimen/d_20dp"
            android:textColor="@color/c_dark_gray"
            android:textSize="@dimen/text_size_16" />

        <EditText
            android:id="@+id/et_inspection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/c_gray_text"
            android:textSize="@dimen/text_size_16"
            android:layout_marginTop="@dimen/d_10dp"
            android:padding="@dimen/d_10dp"
            android:background="@drawable/change_password_border"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitosans_semibold"
            android:text="@string/text_benchmark"
            android:layout_marginTop="@dimen/d_20dp"
            android:textColor="@color/c_dark_gray"
            android:textSize="@dimen/text_size_16" />

        <EditText
            android:id="@+id/et_benchmark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/c_gray_text"
            android:textSize="@dimen/text_size_16"
            android:maxLength="@integer/max_edittext_length"
            android:layout_marginTop="@dimen/d_10dp"
            android:padding="@dimen/d_10dp"
            android:inputType="number"
            android:background="@drawable/change_password_border"/>
        <TextView
            android:id="@+id/tv_benchmarkerror"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_benchmarkerror"
            android:layout_marginTop="-2dp"
            android:visibility="gone"
            android:gravity="left"
            android:padding="@dimen/d_2dp"
            android:fontFamily="@font/nunitosans_regular"
            android:textColor="@color/c_red"
            android:textSize="@dimen/text_size_14"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitosans_semibold"
            android:text="@string/text_doyouneed"
            android:layout_marginTop="@dimen/d_20dp"
            android:textColor="@color/c_gray_text"
            android:textSize="@dimen/text_size_16" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d_5dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_yes"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/d_5dp"
                android:text="@string/text_yes"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/nunitosans_regular"
                android:background="@drawable/tv_shape_blue_border"
                android:padding="@dimen/d_10dp"
                android:textColor="@color/c_blue"
                android:textSize="@dimen/text_size_16"/>

            <TextView
                android:id="@+id/tv_no"
                android:layout_width="@dimen/d_80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/d_5dp"
                android:background="@drawable/button_bg_red"
                android:fontFamily="@font/nunitosans_regular"
                android:gravity="center"
                android:padding="@dimen/d_10dp"
                android:text="@string/text_no"
                android:textColor="@color/c_white"
                android:textSize="@dimen/text_size_16" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_reviewer"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/change_password_border"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            >
            <pl.utkala.searchablespinner.SearchableSpinner
                android:id="@+id/spn_reviewer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/d_10dp"
                android:background="@null"
                app:closeText="Close"
                app:dialogTitle="@string/text_reviewerselect"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:scaleType="fitXY"
                android:padding="@dimen/d_10dp"
                android:background="@drawable/ic_dropdown_gray"
                />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitosans_semibold"
            android:text="@string/text_instruction_note"
            android:layout_marginTop="@dimen/d_20dp"
            android:textColor="@color/c_dark_gray"
            android:textSize="@dimen/text_size_16" />
        <TextView
            android:id="@+id/tv_instructionerror"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_comment_error"
            android:layout_marginTop="-5dp"
            android:visibility="gone"
            android:gravity="left"
            android:padding="@dimen/d_2dp"
            android:fontFamily="@font/nunitosans_regular"
            android:textColor="@color/c_red"
            android:textSize="@dimen/text_size_14"/>
        <EditText
            android:id="@+id/et_commentbox"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:padding="10dp"
            android:layout_marginTop="@dimen/d_5dp"
            android:fontFamily="@font/nunitosans_regular"
            android:hint="@string/text_inspectionnote"
            android:background="@drawable/change_password_border"
            android:inputType="text|textMultiLine"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/c_gray_text"
            android:gravity="top"/>

        <Button
            android:id="@+id/btn_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_done"
            android:textSize="@dimen/text_size_18"
            android:padding="@dimen/d_10dp"
            android:textColor="@color/colorWhite"
            android:layout_marginLeft="@dimen/d_100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="@dimen/d_20dp"
            android:layout_marginBottom="@dimen/d_10dp"
            android:textAllCaps="false"
            android:background="@drawable/button_border_blue"
            android:minHeight="@dimen/search_btn_height"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_10dp"/>

    </LinearLayout>
</ScrollView>



    <include
        layout="@layout/spunk_view"
        android:layout_width="@dimen/d_progressbar"
        android:layout_height="@dimen/d_progressbar"
        android:layout_centerInParent="true"
        />


</RelativeLayout>