<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_white"
    >
    <include
        android:id="@+id/header"
        layout="@layout/include_header_text"/>

    <LinearLayout
        android:id="@+id/ll_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:orientation="vertical"
        android:layout_margin="@dimen/d_10dp">
        <TextView
            android:id="@+id/tv_moreoptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitosans_semibold"
            android:text="@string/text_more_option"
            android:layout_marginTop="@dimen/d_30dp"
            android:visibility="gone"
            android:textColor="@color/c_blue"
            android:textSize="@dimen/text_size_18" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitosans_semibold"
            android:text="@string/text_instruction_note"
            android:layout_marginTop="@dimen/d_20dp"
            android:textColor="@color/c_gray_text"
            android:textSize="@dimen/text_size_16" />

        <EditText
            android:id="@+id/et_instruction"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="10dp"
            android:layout_marginTop="@dimen/d_5dp"
            android:fontFamily="@font/nunitosans_regular"
            android:hint="@string/text_comment_error"
            android:background="@drawable/change_password_border"
            android:inputType="text|textMultiLine"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/c_gray_text"
            android:gravity="top"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitosans_semibold"
            android:text="@string/text_ccemail"
            android:layout_marginTop="@dimen/d_20dp"
            android:textColor="@color/c_gray_text"
            android:textSize="@dimen/text_size_16" />

        <EditText
            android:id="@+id/et_ccemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/c_gray_text"
            android:textSize="@dimen/text_size_16"
            android:layout_marginTop="@dimen/d_10dp"
            android:padding="@dimen/d_10dp"
            android:background="@drawable/change_password_border"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitosans_bold"
            android:text="@string/text_addd_attachment"
            android:layout_marginTop="@dimen/d_20dp"
            android:textColor="@color/c_gray_text"
            android:textSize="@dimen/text_size_16" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitosans_regular"
            android:text="@string/text_media"
            android:drawablePadding="@dimen/d_10dp"
            android:drawableLeft="@mipmap/ic_camera"
            android:layout_marginTop="@dimen/d_20dp"
            android:textColor="@color/c_gray"
            android:textSize="@dimen/text_size_16" />





    </LinearLayout>
    <Button
        android:id="@+id/btn_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_done"
        android:layout_weight="1"
        android:layout_below="@+id/ll_container"
        android:textColor="@color/colorWhite"
        android:layout_marginLeft="@dimen/d_100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="@dimen/d_50dp"
        android:layout_marginBottom="@dimen/d_10dp"
        android:textAllCaps="false"
        android:background="@drawable/button_border_blue"
        android:minHeight="@dimen/search_btn_height"/>


    <include
        layout="@layout/spunk_view"
        android:layout_width="@dimen/d_progressbar"
        android:layout_height="@dimen/d_progressbar"
        android:layout_centerInParent="true"
        />


</RelativeLayout>